@@ -17,7 +17,7 @@ public class RemoveFirst implements Command {
     @Override
     public ArrayList<String> execute(ArrayList<String> args, IOInterface terminal) throws CommandException {
         ArrayList cities = this.storage.getStorage();
-        cities.removeFirst();
+        cities.remove(0);
         this.storage.setStorsge(cities);
         return new ArrayList<>();
     }
